Fix analog stick being off-center on start; start with some developer commentary unlocked; add mobile touch support; add notes on dev commentary and min score at start

--- a/styles.css
+++ b/styles.css
@@ -113,8 +113,10 @@ body{
 
 #measure{
 	color:#c6c6c6;
-	font-size:3em;
+	font-size:6vw;
 	text-align:center;
+	margin:0;
+	padding:0;
 }
 
 /*********************/
